# cpu-ray-tracing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  temp.txt  vcpkg.json
include/rt/: Camera.hpp  HitRecord.hpp  Hittable.hpp  Material.hpp  Ray.hpp  RayTracingApps.hpp  Scene.hpp  SoftTracer.hpp  Sphere.hpp  Utils.hpp
include/rt/apps/: Application.hpp  CompareSampling.hpp  CornerBox.hpp  MirrorBox.hpp  MisComparison.hpp  Playground.hpp  RandomSpheres.hpp  SimpleLight.hpp  SimpleLightWrong.hpp
include/rt/core/: Camera.hpp  HitRecord.hpp  ONB.hpp  Ray.hpp  Utils.hpp
include/rt/hittables/: Hittable.hpp  Quad.hpp  Scene.hpp  Sphere.hpp
include/rt/materials/: DiffuseLight.hpp  Lambertian.hpp  Material.hpp  Metal.hpp  WrongLambertian.hpp
include/rt/pdf/: CosinePDF.hpp  CosinePowerPDF.hpp  DeltaPDF.hpp  HittablePDF.hpp  MixturePDF.hpp  PDF.hpp  UniformPDF.hpp
src/: main.cpp
src/rt/: Camera.cpp  Material.cpp  RayTracingApps.cpp  Scene.cpp  SoftTracer.cpp  Sphere.cpp
src/rt/apps/: CompareSampling.cpp  CornerBox.cpp  MirrorBox.cpp  MisComparison.cpp  Playground.cpp  RandomSpheres.cpp  SimpleLight.cpp  SimpleLightWrong.cpp
src/rt/core/: Camera.cpp
src/rt/hittables/: Quad.cpp  Scene.cpp  Sphere.cpp
src/rt/materials/: Lambertian.cpp  Metal.cpp  WrongLambertian.cpp
tests/: CMakeLists.txt  test_main.cpp
